# dashima-cpp-network-server-lab3

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  PROJECT_DESCRIPTION.md  README.md  run-wsl.ps1
app/: main.cpp
docs/: benchmark_results.csv  compliance_checklist.md  explanatory_note.docx  explanatory_note.md
docs/uml/: class_diagram.puml
include/network_server/container/: AdditiveHash.hpp  HashTable.hpp
include/network_server/controller/: ServerController.hpp
include/network_server/model/: FilePacket.hpp  HypertextPacket.hpp  LinkDescriptor.hpp  MailPacket.hpp  MessageDescriptor.hpp  Packet.hpp  PacketKey.hpp  PacketStatistics.hpp  PacketTypes.hpp  ServerDescriptor.hpp  TransmissionTable.hpp
include/network_server/view/: ConsoleView.hpp
scripts/: create_explanatory_note_docx.py  generate_benchmark_graph.py  generate_uml_assets.py
src/controller/: ServerController.cpp
src/model/: FilePacket.cpp  HypertextPacket.cpp  LinkDescriptor.cpp  MailPacket.cpp  MessageDescriptor.cpp  Packet.cpp  PacketStatistics.cpp  PacketTypes.cpp  ServerDescriptor.cpp  TransmissionTable.cpp
src/view/: ConsoleView.cpp
tests/: HashTableTests.cpp  PacketTests.cpp  ServerTests.cpp
tools/: benchmark.cpp
